<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="jp.hxs.android.konashi.otaupdater.KonashiOtaUpdaterFragment">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/konashi_updater_card_margin"
        app:cardBackgroundColor="@color/cardview_light_background" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/konashi_updater_card_padding"
            android:orientation="vertical">

            <TextView style="@style/Base.TextAppearance.AppCompat.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/konashi_updater_text_firmware" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/konashi_input_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText style="@style/NoEditableEditText"
                    android:id="@+id/konashi_edit_title"
                    android:hint="@string/konashi_updater_label_title"
                    tools:text="konashi2.0.0-release-04-DeviceNameBugFix.bin" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/konashi_input_author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText style="@style/NoEditableEditText"
                    android:id="@+id/konashi_edit_author"
                    android:hint="@string/konashi_updater_label_author"
                    tools:text="konashi@example.com" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/konashi_input_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText style="@style/NoEditableEditText"
                    android:id="@+id/konashi_edit_description"
                    android:hint="@string/konashi_updater_label_description"
                    tools:text="DEVICE NAMEを変更し、IDの末尾1文字がこぼれる問題に対処しました。" />

            </android.support.design.widget.TextInputLayout>

            <Button style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/konashi_updater_btn_select_firmware" />

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/konashi_updater_card_margin"
        app:cardBackgroundColor="@color/cardview_light_background" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/konashi_updater_card_padding"
            android:orientation="vertical">

            <TextView style="@style/Base.TextAppearance.AppCompat.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/konashi_updater_text_target" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/konashi_input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText style="@style/NoEditableEditText"
                    android:id="@+id/konashi_edit_name"
                    android:hint="@string/konashi_updater_label_name"
                    tools:text="konashi2-xxxxxx" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/konashi_input_revision"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText style="@style/NoEditableEditText"
                    android:id="@+id/konashi_edit_revision"
                    android:hint="@string/konashi_updater_label_revision"
                    tools:text="2.0.0" />

            </android.support.design.widget.TextInputLayout>

            <Button style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/konashi_updater_btn_connect" />

        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>
